# metagenompy

./: README.md  pyproject.toml
.github/workflows/: main.yaml  pypi-publish.yml
metagenompy/: __init__.py  data.py  taxonomy.py  visualization.py
tests/: test_taxonomy.py  test_visualization.py
