[tool.poetry]
name = "metagenompy"
version = "0.4.0"
description = "Your all-inclusive package for aggregating and visualizing metagenomic BLAST results."
license = "MIT"
authors = ["kpj <kim.philipp.jablonski@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kpj/metagenompy"

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.0"
networkx = "^2.5"
tqdm = "^4.55.1"
matplotlib = "^3.3.3"
ipython = "^7.19.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "^20.8b1"

[tool.black]
line_length = 79
skip_string_normalization = true

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
