[tool.poetry]
name = "metagenompy"
version = "0.4.4"
description = "Your all-inclusive package for aggregating and visualizing metagenomic BLAST results."
license = "MIT"
authors = ["kpj <kim.philipp.jablonski@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kpj/metagenompy"
include = ["metagenompy/example_data/blast_result.csv.gz"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.0"
networkx = "^2.5"
pygraphviz = "^1.6"
tqdm = "^4.55.1"
seaborn = "^0.11.1"
matplotlib = "^3.3.3"
numpy = "^1.19.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.1"
# pytest-markdown = "^1.0.2"

[tool.black]
line_length = 79
skip_string_normalization = true
