[tool.poetry]
name = "metagenompy"
version = "0.4.6"
description = "Your all-inclusive package for aggregating and visualizing metagenomic BLAST results."
license = "MIT"
authors = ["kpj <kim.philipp.jablonski@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kpj/metagenompy"
include = ["metagenompy/example_data/blast_result.csv.gz"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.3.5"
networkx = "^2.6.3"
pygraphviz = "^1.7"
tqdm = "^4.62.3"
seaborn = "^0.11.2"
matplotlib = "^3.5.1"
numpy = "^1.21.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
# pytest-markdown = "^1.0.2"

[tool.black]
line_length = 79
skip_string_normalization = true

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
